--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,9 +9,19 @@ jobs:
   Generate-Snake-Game:
     runs-on: ubuntu-latest
     steps:
-      - uses: Platane/snk@v2
+      - name: generate snake animation
+        uses: Platane/snk@v2
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
+
+      - name: push snake animation
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          # Contents will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file>
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
