--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           # Contents will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file>
-          target_branch: output
+          target_branch: main
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
